// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Translate-to-withNamespaces-t 1. Translate-to-withNamespaces-t: 1. Translate-to-withNamespaces-t 1`] = `
"
const C = () => (
  <div>
    <Translate
      count={props.totalVisitors}
      totalViews={numeral(props.totalVisitors).format(\\"0,0\\")}
      i18nKey=\\"key\\"
    />
  </div>
);

      ↓ ↓ ↓ ↓ ↓ ↓

\\"use strict\\";

var _reactI18next = require(\\"react-i18next\\");

var C = function C() {
  return React.createElement(\\"div\\", null, t(\\"key\\", {
    count: props.totalVisitors,
    totalViews: numeral(props.totalVisitors).format(\\"0,0\\")
  }));
};
"
`;

exports[`Translate-to-withNamespaces-t 2. Translate-to-withNamespaces-t: 2. Translate-to-withNamespaces-t 1`] = `
"
const C = () => (
  <div>
    <Translate
      count={props.totalVisitors}
      totalViews={numeral(props.totalVisitors).format(\\"0,0\\")}
      i18nKey=\\"key_with_pluralization\\"
    />
  </div>
);

      ↓ ↓ ↓ ↓ ↓ ↓

\\"use strict\\";

var _reactI18next = require(\\"react-i18next\\");

var C = function C() {
  return React.createElement(\\"div\\", null, t(\\"key_with_pluralization\\", {
    count: props.totalVisitors,
    totalViews: numeral(props.totalVisitors).format(\\"0,0\\")
  }));
};
"
`;

exports[`Translate-to-withNamespaces-t 3. Translate-to-withNamespaces-t: 3. Translate-to-withNamespaces-t 1`] = `
"
// Simplified file without import or export
const C = () => (
  <div>
    <Translate
      count={props.totalVisitors}
      totalViews={numeral(props.totalVisitors).format(\\"0,0\\")}
      i18nKey=\\"key_with_html\\"
    />
  </div>
);

      ↓ ↓ ↓ ↓ ↓ ↓

\\"use strict\\";

var _reactI18next = require(\\"react-i18next\\");

// Simplified file without import or export
var C = function C() {
  return React.createElement(\\"div\\", null, safeT(t(\\"key_with_html\\", {
    count: props.totalVisitors,
    totalViews: numeral(props.totalVisitors).format(\\"0,0\\")
  })));
};
"
`;

exports[`Translate-to-withNamespaces-t 4. Translate-to-withNamespaces-t: 4. Translate-to-withNamespaces-t 1`] = `
"
// Simplified file without import or export
const C = () => (
  <div>
    <Translate
      count={props.totalVisitors}
      totalViews={numeral(props.totalVisitors).format(\\"0,0\\")}
      i18nKey=\\"key_with_pluralization_and_html\\"
    />
  </div>
);

      ↓ ↓ ↓ ↓ ↓ ↓

\\"use strict\\";

var _reactI18next = require(\\"react-i18next\\");

// Simplified file without import or export
var C = function C() {
  return React.createElement(\\"div\\", null, safeT(t(\\"key_with_pluralization_and_html\\", {
    count: props.totalVisitors,
    totalViews: numeral(props.totalVisitors).format(\\"0,0\\")
  })));
};
"
`;

exports[`Translate-to-withNamespaces-t 5. Translate-to-withNamespaces-t: 5. Translate-to-withNamespaces-t 1`] = `
"
// Test with import
import Translate from 'components/translate'

const C = () => (
  <div>
    <Translate
      count={props.totalVisitors}
      totalViews={numeral(props.totalVisitors).format(\\"0,0\\")}
      i18nKey=\\"key_with_pluralization\\"
    />
  </div>
);

export default C;

      ↓ ↓ ↓ ↓ ↓ ↓

\\"use strict\\";

Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
exports.default = void 0;

var _reactI18next = require(\\"react-i18next\\");

// Test with import
var C = function C() {
  return React.createElement(\\"div\\", null, t(\\"key_with_pluralization\\", {
    count: props.totalVisitors,
    totalViews: numeral(props.totalVisitors).format(\\"0,0\\")
  }));
};

var _default = C;
exports.default = _default;
"
`;
